Fix vertical centering on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -150,7 +150,7 @@ html {
   flex-direction: column;
   display: flex;
   margin: 0;
-  min-height: 100vh;
+  min-height: 100%;
   padding: 0 $default-padding;
 }
 
